reports/03_homer_vis.log
Traceback (most recent call last):
  File "/data/reddylab/Kuei/envs/jupyterhub/lib/python3.6/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/data/reddylab/Kuei/envs/jupyterhub/lib/python3.6/site-packages/nbclient/client.py", line 1087, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/data/reddylab/Kuei/envs/jupyterhub/lib/python3.6/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/data/reddylab/Kuei/envs/jupyterhub/lib/python3.6/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/data/reddylab/Kuei/envs/jupyterhub/lib/python3.6/asyncio/base_events.py", line 488, in run_until_complete
    return future.result()
  File "/data/reddylab/Kuei/envs/jupyterhub/lib/python3.6/site-packages/nbclient/client.py", line 541, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/data/reddylab/Kuei/envs/jupyterhub/lib/python3.6/site-packages/nbclient/client.py", line 832, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/data/reddylab/Kuei/envs/jupyterhub/lib/python3.6/site-packages/nbclient/client.py", line 740, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
makeUCSCfile Exp1-csRNA-tagDir/ -style tss -strand +  > exp1.posStrand.bedGraph
makeUCSCfile Exp1-csRNA-tagDir/ -style tss -strand - -neg  > exp1.negStrand.bedGraph
------------------

[0;36m  File [0;32m"<ipython-input-2-d8a13bd85b81>"[0;36m, line [0;32m1[0m
[0;31m    makeUCSCfile Exp1-csRNA-tagDir/ -style tss -strand +  > exp1.posStrand.bedGraph[0m
[0m                    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-2-d8a13bd85b81>, line 1)

